V4035: Added missing Components on P020 and D354

--- a/Prevu.Synoptics.V4035_EcoGreen/Details/D354.xaml
+++ b/Prevu.Synoptics.V4035_EcoGreen/Details/D354.xaml
@@ -41,5 +41,6 @@
         <Labels:DeviceLabel ComponentName="354-21-CV1" HorizontalAlignment="Left" Canvas.Left="35" Canvas.Top="110" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="354-41-TT1" HorizontalAlignment="Left" Canvas.Left="221" Canvas.Top="86" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="354-42-PT2" HorizontalAlignment="Left" Canvas.Left="221" Canvas.Top="230" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="354-42-PT1" Canvas.Left="35" Canvas.Top="232" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
