--- a/Prevu.Synoptics.V4035_EcoGreen/OverallView.xaml
+++ b/Prevu.Synoptics.V4035_EcoGreen/OverallView.xaml
@@ -241,9 +241,10 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
+        <Labels:Pipe Canvas.Left="2298" Canvas.Top="3361" PipeHeight="Medium" Width="122" StatusComponent="455-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <local:P020 CacheMode="BitmapCache" Canvas.Left="54" Canvas.Top="9" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
         <local:P100 CacheMode="BitmapCache" Canvas.Left="1144" Canvas.Top="516" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
-        <local:P140 CacheMode="BitmapCache" Canvas.Left="2769" Canvas.Top="164" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
+        <local:P140 CacheMode="BitmapCache" Canvas.Left="2779" Canvas.Top="164" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
         <local:P230 CacheMode="BitmapCache" Canvas.Left="4068" Canvas.Top="654" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
         <local:P288 CacheMode="BitmapCache" Canvas.Left="2619" Canvas.Top="1801" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
         <local:P330 CacheMode="BitmapCache" Canvas.Left="5328" Canvas.Top="1131" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
