--- a/Prevu.Synoptics.V4035_EcoGreen/Pages/P020.xaml
+++ b/Prevu.Synoptics.V4035_EcoGreen/Pages/P020.xaml
@@ -143,6 +143,7 @@
         <Labels:DeviceLabel ComponentName="020-01-YA1" Canvas.Left="88" Canvas.Top="668" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.511,0.55"/>
         <Labels:DeviceLabel ComponentName="018-01-YA1" Canvas.Left="372" Canvas.Top="213" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="032-01-MA1" Canvas.Left="1166" Canvas.Top="616" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-    <Labels:DeviceLabel ComponentName="032-41-LT1" Canvas.Left="1029" Canvas.Top="512" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="032-41-LT1" Canvas.Left="1029" Canvas.Top="512" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="032-01-YA1" Canvas.Left="1166" Canvas.Top="685" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
