--- a/Prevu.Synoptics.V4035_EcoGreen/Pages/P330.xaml
+++ b/Prevu.Synoptics.V4035_EcoGreen/Pages/P330.xaml
@@ -9,7 +9,7 @@
              x:Class="Prevu.Synoptics.P330" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
-        <Labels:Pipe Width="165" StatusComponent="324-21-CV1" PipeHeight="Medium"  Canvas.Left="848" Canvas.Top="194" VisibilityComponent="324-21-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="165" StatusComponent="322-01-MA1" PipeHeight="Medium"  Canvas.Left="848" Canvas.Top="194" VisibilityComponent="324-21-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="164" StatusComponent="298-01-MA1" PipeHeight="Medium"  Canvas.Left="109" Canvas.Top="295" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" VisibilityComponent="279-21-CV1" VisibilitySignal="LS1" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -25,7 +25,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="156" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="1069" Canvas.Top="340" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="156" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="335-21-CV1" Canvas.Left="1069" Canvas.Top="340" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -51,22 +51,22 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="356" StatusComponent="324-21-CV1" PipeHeight="Medium"  VisibilityComponent="324-21-CV1" VisibilitySignal="LS1" Canvas.Left="675" Canvas.Top="367" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="356" StatusComponent="322-01-MA1" PipeHeight="Medium"  VisibilityComponent="324-21-CV1" VisibilitySignal="LS1" Canvas.Left="675" Canvas.Top="367" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="290" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="599" Canvas.Top="408" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="290" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="330-21-CV1" Canvas.Left="599" Canvas.Top="408" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="166" StatusComponent="324-21-CV1" PipeHeight="Medium"  Canvas.Left="1090" Canvas.Top="194" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="324-21-CV1" VisibilitySignal="LS2"/>
-        <Labels:Pipe Width="242" StatusComponent="324-21-CV1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5"  Canvas.Left="1130" Canvas.Top="310" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="324-21-CV1" VisibilitySignal="LS2">
+        <Labels:Pipe Width="166" StatusComponent="322-01-MA1" PipeHeight="Medium"  Canvas.Left="1090" Canvas.Top="194" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="324-21-CV1" VisibilitySignal="LS2"/>
+        <Labels:Pipe Width="242" StatusComponent="322-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5"  Canvas.Left="1130" Canvas.Top="310" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="324-21-CV1" VisibilitySignal="LS2">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
