--- a/Prevu.Synoptics.V4035_EcoGreen/Pages/P460.xaml
+++ b/Prevu.Synoptics.V4035_EcoGreen/Pages/P460.xaml
@@ -34,8 +34,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="67" RenderTransformOrigin="0.5,0.5" StatusComponent="464-01-MA1" VisibilityComponent="" Canvas.Left="483" Canvas.Top="368"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="306" RenderTransformOrigin="0.5,0.5" StatusComponent="464-01-MA1" VisibilityComponent="" Canvas.Left="332" Canvas.Top="519">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="67" RenderTransformOrigin="0.5,0.5" StatusComponent="473-01-MA1" Canvas.Left="483" Canvas.Top="368"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="306" RenderTransformOrigin="0.5,0.5" StatusComponent="473-01-MA1" Canvas.Left="332" Canvas.Top="519">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
