--- a/Prevu.Synoptics.V4035_EcoGreen/Pages/P880.xaml
+++ b/Prevu.Synoptics.V4035_EcoGreen/Pages/P880.xaml
@@ -16,7 +16,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="148" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-EC1" Canvas.Left="408" Canvas.Top="504" HorizontalAlignment="Left" VerticalAlignment="Center" PipeHeight="Medium" >
+        <Labels:Pipe Width="148" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-ECS10" Canvas.Left="408" Canvas.Top="504" HorizontalAlignment="Left" VerticalAlignment="Center" PipeHeight="Medium" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -174,5 +174,47 @@
         <Labels:DeviceLabel ComponentName="880-61-LS4" Canvas.Left="602" Canvas.Top="110" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="883-01-MA1" Canvas.Left="816" Canvas.Top="509" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="997-25-CV1" Canvas.Left="1319" Canvas.Top="530" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="997-61-BAG" Canvas.Left="1257" Canvas.Top="740"/>
+        <Labels:DeviceLabel ComponentName="997-62-BAG" Canvas.Left="1389" Canvas.Top="740"/>
+        <Labels:Pipe Width="14" RenderTransformOrigin="0.5,0.5" StatusComponent="997-21-CV1" Canvas.Left="1270" Canvas.Top="597" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform />
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="14" RenderTransformOrigin="0.5,0.5" StatusComponent="997-21-CV1" Canvas.Left="1312" Canvas.Top="597" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform />
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="14" RenderTransformOrigin="0.5,0.5" StatusComponent="997-22-CV1" Canvas.Left="1403" Canvas.Top="597" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform />
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="14" RenderTransformOrigin="0.5,0.5" StatusComponent="997-22-CV1" Canvas.Left="1445" Canvas.Top="597" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform />
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
     </Canvas>
 </UserControl>
