--- a/Prevu.Synoptics.V3001-Coveris/P371.xaml
+++ b/Prevu.Synoptics.V3001-Coveris/P371.xaml
@@ -9,7 +9,7 @@
              x:Class="Prevu.Synoptics.P371" mc:Ignorable="d" 
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
     <Grid>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="623,407,0,0" VerticalAlignment="Top" Color="Water" Width="238" RenderTransformOrigin="0.5,0.5" StatusComponent="390-71-EC1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="623,407,0,0" VerticalAlignment="Top" Color="Water" Width="238" RenderTransformOrigin="0.5,0.5" StatusComponent="379-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -19,7 +19,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="741,524,0,0" VerticalAlignment="Top" Color="Water" Width="99" RenderTransformOrigin="0.5,0.5" StatusComponent="390-71-EC1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="741,524,0,0" VerticalAlignment="Top" Color="Water" Width="99" RenderTransformOrigin="0.5,0.5" StatusComponent="379-01-MA1"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="794,375,0,0" VerticalAlignment="Top" Color="Water" Width="78" RenderTransformOrigin="0.5,0.5" StatusComponent="349-01-EC1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -30,8 +30,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="844,407,0,0" VerticalAlignment="Top" Color="Water" Width="108" RenderTransformOrigin="0.5,0.5" StatusComponent="349-01-EC1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="794,375,0,0" VerticalAlignment="Top" Color="Water" Width="78" RenderTransformOrigin="0.5,0.5" StatusComponent="349-01-EC1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="844,407,0,0" VerticalAlignment="Top" Color="Water" Width="108" RenderTransformOrigin="0.5,0.5" StatusComponent="379-01-MA1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="794,375,0,0" VerticalAlignment="Top" Color="Water" Width="78" RenderTransformOrigin="0.5,0.5" StatusComponent="379-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -52,8 +52,8 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" Margin="769,176,0,0" VerticalAlignment="Top" Width="57" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="347-21-CV1" />
-        <Labels:Pipe HorizontalAlignment="Left" Margin="740,290,0,0" VerticalAlignment="Top" Color="Water" Width="70" RenderTransformOrigin="0.5,0.5" StatusComponent="390-71-EC1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="808,552,0,0" VerticalAlignment="Top" Color="Water" Width="60" RenderTransformOrigin="0.5,0.5" StatusComponent="390-71-EC1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="740,290,0,0" VerticalAlignment="Top" Color="Water" Width="70" RenderTransformOrigin="0.5,0.5" StatusComponent="379-01-MA1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="808,552,0,0" VerticalAlignment="Top" Color="Water" Width="60" RenderTransformOrigin="0.5,0.5" StatusComponent="379-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -63,7 +63,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="1085,250,0,0" VerticalAlignment="Top" Color="Water" Width="126" RenderTransformOrigin="0.5,0.5" StatusComponent="349-01-EC1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1085,250,0,0" VerticalAlignment="Top" Color="Water" Width="126" RenderTransformOrigin="0.5,0.5" StatusComponent="379-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -73,8 +73,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="1147,312,0,0" VerticalAlignment="Top" Color="Water" Width="118" RenderTransformOrigin="0.5,0.5" StatusComponent="349-01-EC1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="822,271,0,0" VerticalAlignment="Top" Color="Water" Width="256" RenderTransformOrigin="0.5,0.5" StatusComponent="349-01-EC1" Icon="Left">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1147,312,0,0" VerticalAlignment="Top" Color="Water" Width="118" RenderTransformOrigin="0.5,0.5" StatusComponent="379-01-MA1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="822,271,0,0" VerticalAlignment="Top" Color="Water" Width="256" RenderTransformOrigin="0.5,0.5" StatusComponent="379-01-MA1" Icon="Left">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -84,7 +84,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="831,312,0,0" VerticalAlignment="Top" Color="Water" Width="300" RenderTransformOrigin="0.5,0.5" StatusComponent="349-01-EC1" Icon="Right">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="831,312,0,0" VerticalAlignment="Top" Color="Water" Width="300" RenderTransformOrigin="0.5,0.5" StatusComponent="379-01-MA1" Icon="Right">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -94,10 +94,10 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="979,174,0,0" VerticalAlignment="Top" Color="Water" Width="132" RenderTransformOrigin="0.5,0.5" StatusComponent="349-01-EC1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="948,154,0,0" VerticalAlignment="Top" Color="Water" Width="167" RenderTransformOrigin="0.5,0.5" StatusComponent="349-01-EC1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="886,469,0,0" VerticalAlignment="Top" Color="Water" Width="97" RenderTransformOrigin="0.5,0.5" StatusComponent="349-01-EC1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="831,524,0,0" VerticalAlignment="Top" Color="Water" Width="114" RenderTransformOrigin="0.5,0.5" StatusComponent="349-01-EC1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="979,174,0,0" VerticalAlignment="Top" Color="Water" Width="132" RenderTransformOrigin="0.5,0.5" StatusComponent="379-01-MA1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="948,154,0,0" VerticalAlignment="Top" Color="Water" Width="167" RenderTransformOrigin="0.5,0.5" StatusComponent="379-01-MA1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="886,469,0,0" VerticalAlignment="Top" Color="Water" Width="97" RenderTransformOrigin="0.5,0.5" StatusComponent="379-01-MA1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="831,524,0,0" VerticalAlignment="Top" Color="Water" Width="114" RenderTransformOrigin="0.5,0.5" StatusComponent="379-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -160,7 +160,7 @@
         <Machines:CV_Valve HorizontalAlignment="Left" Margin="1018,678,0,0" VerticalAlignment="Top" Height="35" Width="35"/>
         <Labels:JumpLabel HorizontalAlignment="Left" Margin="1253,599,0,0" VerticalAlignment="Top" JumpToLabel="380-01-MA1" JumpFromLabel="390-71-EC1"/>
         <Labels:JumpLabel HorizontalAlignment="Left" Margin="1253,724,0,0" VerticalAlignment="Top" JumpToLabel="370-26-CV1" JumpFromLabel="390-71-EC1"/>
-        <Labels:JumpLabel HorizontalAlignment="Left" Margin="517,217,0,0" VerticalAlignment="Top" JumpToLabel="379-01-MA1" JumpFromLabel="390-71-EC1"/>
+        <Labels:JumpLabel HorizontalAlignment="Left" Margin="506,217,0,0" VerticalAlignment="Top" JumpToLabel="379-01-MA1" JumpFromLabel="390-71-EC1"/>
         <TextBlock HorizontalAlignment="Left" Margin="645,736,0,53" TextWrapping="Wrap" TextAlignment="Center" FontSize="36" Foreground="Black" FontWeight="Bold" Text="Filtration Unit"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" Margin="840,600,0,0" VerticalAlignment="Top" ComponentName="390-71-EC1"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="239,594,0,0" VerticalAlignment="Top" Width="206" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="359-21-CV1" Height="12"/>
@@ -230,10 +230,10 @@
         <Labels:JumpLabel HorizontalAlignment="Left" Margin="435,479,0,0" VerticalAlignment="Top" JumpToLabel="370-41-LT1" JumpFromLabel="371-ACS"/>
         <Labels:JumpLabel HorizontalAlignment="Left" Margin="435,565,0,0" VerticalAlignment="Top" JumpToLabel="370-41-LT1" JumpFromLabel="359-21-CV1"/>
         <TextBlock HorizontalAlignment="Left" Margin="106,647,0,142" TextWrapping="Wrap" TextAlignment="Center" FontSize="36" Foreground="Black" FontWeight="Bold"><Run Language="it-it" Text="Chemicals"/></TextBlock>
-        <Rectangle x:Name="BorderFiltration" Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Margin="625,55,182,35" d:IsLocked="True"/>
-        <Rectangle x:Name="BorderChemicals" Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Margin="80,125,1005,122" d:IsLocked="True"/>
+        <Rectangle x:Name="BorderFiltration" Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Margin="612,55,202,35"/>
+        <Rectangle x:Name="BorderChemicals" Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Margin="80,125,1005,122"/>
         <Machines:WaterPump HorizontalAlignment="Left" Margin="739,143,0,0" VerticalAlignment="Top" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Chemicals"/>
-        <Machines:VRC_WaterCollectingTank HorizontalAlignment="Left" Margin="781,282,0,0" VerticalAlignment="Top" Height="76" Width="100" ComponentName="370-41-LT1" TrendName="LEVEL"/>
+        <Machines:VRC_WaterCollectingTank HorizontalAlignment="Left" Margin="781,282,0,0" VerticalAlignment="Top" Height="76" Width="100" ComponentName="" TrendName=""/>
         <Rectangle Stroke="Black" Margin="863,257,555,548" />
         <Machines:WaterPump HorizontalAlignment="Left" Margin="822,397,0,0" VerticalAlignment="Top" Color="None" Height="26" Width="29"/>
         <Rectangle HorizontalAlignment="Left" Height="106" Margin="1018,141,0,0" 
@@ -242,5 +242,8 @@
         <Labels:DeviceLabel HorizontalAlignment="Left" Margin="842,207,0,0" VerticalAlignment="Top" ComponentName="349-61-LS1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" Margin="639,153,0,0" VerticalAlignment="Top" ComponentName="347-21-CV1"/>
         <Labels:JumpLabel HorizontalAlignment="Left" Margin="1253,280,0,0" VerticalAlignment="Top" JumpToLabel="494-01-MA1" JumpFromLabel="349-01-EC1"/>
-    </Grid>
+    <Rectangle Stroke="Black" Margin="674,252,744,553" />
+    <Labels:DeviceLabel HorizontalAlignment="Left" Margin="630,283,0,0" VerticalAlignment="Top" ComponentName="349-62-PS1"/>
+    <Labels:DeviceLabel HorizontalAlignment="Left" Margin="1066,82,0,0" VerticalAlignment="Top" ComponentName="349-COMM"/>
+  </Grid>
 </UserControl>
