--- a/Prevu.Synoptics.V4659_Steinbais/PlantView.xaml
+++ b/Prevu.Synoptics.V4659_Steinbais/PlantView.xaml
@@ -12,7 +12,7 @@
              lex:ResxLocalizationProvider.DefaultDictionary="Resources"             
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}" >
-    <Canvas Height="750" Width="1710" >
+  <Canvas Height="750" Width="1710" >
     <Machines:QX_HMI Height="66" Width="56" Canvas.Left="493" Canvas.Top="114" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:QX_HMI Height="66" Width="56" Canvas.Left="371" Canvas.Top="114" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:QX_HMI Height="66" Width="56" Canvas.Left="247" Canvas.Top="114" HorizontalAlignment="Center" VerticalAlignment="Center"/>
@@ -71,5 +71,6 @@
     <Labels:DeviceLabel ComponentName="L2+S720" Canvas.Left="1378" Canvas.Top="622" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     <Labels:DeviceLabel ComponentName="L2+Q72-POWER" Canvas.Left="1495" Canvas.Top="485" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:GroupLabel GroupName="L2+810" Canvas.Left="1565" Canvas.Top="620" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="DWSTR-COMM-2" Canvas.Left="1132" Canvas.Top="62" HorizontalAlignment="Left" VerticalAlignment="Center"/>
   </Canvas>
 </UserControl>
