--- a/Prevu.Synoptics.V3085_Anviplas/P570.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/P570.xaml
@@ -328,6 +328,8 @@
     <Labels:Pipe Width="28" StatusComponent="570-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="580" Canvas.Top="554" Direction="DirectionTwo" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DisplayLabel Canvas.Left="745" Canvas.Top="535" FontSize="20" ComponentName="570-BUNKERS" HorizontalAlignment="Left" VerticalAlignment="Center" Width="145"/>
     <Labels:DeviceLabel 
-      ComponentName="580-71-ECS4" Canvas.Left="1406" Canvas.Top="653" RenderTransformOrigin="-0.615,-1.061" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+      ComponentName="580-71-ECS4" Canvas.Left="1406" Canvas.Top="621" RenderTransformOrigin="-0.615,-1.061" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel 
+      ComponentName="580-71-ECS5" Canvas.Left="1406" Canvas.Top="684" RenderTransformOrigin="-0.615,-1.061" HorizontalAlignment="Center" VerticalAlignment="Top"/>
   </Canvas>
 </UserControl>
