Prevu.Details: Fix Missing Trend Name on Detail Mix Silos

--- a/Prevu.Details/Silos/DET_003_SLX_MixSiloWeight.xaml
+++ b/Prevu.Details/Silos/DET_003_SLX_MixSiloWeight.xaml
@@ -10,7 +10,7 @@
              d:Background="{DynamicResource MaterialDesignPaper}"
              x:Class="Prevu.Synoptics.DET_003_SLX_MixSiloWeight">
     <Canvas Height="450" Width="332">
-        <Machines:V01_SLX_MixingSiloScrew Height="442" Width="323" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="5" Canvas.Top="2"/>
+        <Machines:V01_SLX_MixingSiloScrew Height="442" Width="323" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="5" Canvas.Top="2" ComponentName="810-41-WT1" TrendName="WEIGHT"/>
         <Labels:SignalLabel ComponentName="810-41-WT1" SignalName="LSHA" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="34" Canvas.Top="83"/>
         <Labels:DeviceLabel ComponentName="810-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="117" Canvas.Top="26"/>
         <Labels:DeviceLabel ComponentName="810-41-WT1" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="34" Canvas.Top="163"/>
