V4066: Fix Missing Componente and Trend Name on Details Mix Silos and P810

--- a/Prevu.Synoptics.V4066_BRR/Details/D810.xaml
+++ b/Prevu.Synoptics.V4066_BRR/Details/D810.xaml
@@ -9,7 +9,7 @@
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas Height="540" Width="353">
-        <Machines:V01_SLX_MixingSiloScrew Height="442" Width="323" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="14" Canvas.Top="91"/>
+        <Machines:V01_SLX_MixingSiloScrew Height="442" Width="323" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="14" Canvas.Top="91" Color="DryMaterial" ComponentName="810-46-WT1" TrendName="WEIGHT"/>
         <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="810-41-LT1" SignalName="LSHA" Canvas.Left="43" Canvas.Top="172"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="810-01-MA1" Canvas.Left="126" Canvas.Top="115"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" ComponentName="810-46-WT1" Canvas.Left="214" Canvas.Top="270" VerticalAlignment="Top"/>
