--- a/Prevu.Synoptics.V4126_Cotiplast-PET/Details/D810.xaml
+++ b/Prevu.Synoptics.V4126_Cotiplast-PET/Details/D810.xaml
@@ -10,7 +10,7 @@
              d:Background="{DynamicResource MaterialDesignPaper}"
              x:Class="Prevu.Synoptics.D810">
     <Canvas Height="450" Width="332">
-        <Machines:V01_SLX_MixingSiloScrew Height="442" Width="323" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="5" Canvas.Top="2"/>
+        <Machines:V01_SLX_MixingSiloScrew Height="442" Width="323" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="5" Canvas.Top="2" Color="DryMaterial" ComponentName="810-41-WT1" TrendName="WEIGHT"/>
         <Labels:SignalLabel ComponentName="810-41-WT1" SignalName="LSHA" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="34" Canvas.Top="83"/>
         <Labels:DeviceLabel ComponentName="810-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="117" Canvas.Top="26"/>
         <Labels:DeviceLabel ComponentName="810-41-WT1" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="34" Canvas.Top="163"/>
