V4125: Update During CompList

--- a/Prevu.Synoptics.V4125_Cotiplast-FILM/Pages/P570.xaml
+++ b/Prevu.Synoptics.V4125_Cotiplast-FILM/Pages/P570.xaml
@@ -86,7 +86,7 @@
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="570-01-MA1" Canvas.Left="418" Canvas.Top="461"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="570-42-LT1" Canvas.Left="542" Canvas.Top="399"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="570-41-LT1" Canvas.Left="806" Canvas.Top="399"/>
-        <Labels:DeviceLabel ComponentName="570-BUNKERS" Canvas.Left="339" Canvas.Top="364" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="570-BUNKER" Canvas.Left="339" Canvas.Top="364" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="570-01-MA1" JumpToLabel="544-01-MA1" Canvas.Left="418" Canvas.Top="101"/>
     </Canvas>
 </UserControl>
