--- a/Prevu.Synoptics.V4125_Cotiplast-FILM/Pages/P230.xaml
+++ b/Prevu.Synoptics.V4125_Cotiplast-FILM/Pages/P230.xaml
@@ -42,30 +42,21 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Color="Water" Width="135" StatusComponent="236-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="501" Canvas.Top="769" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Color="Water" Width="58" RenderTransformOrigin="0.5,0.5" StatusComponent="232-21-CV2" Canvas.Left="1224" Canvas.Top="605" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Color="Water" Width="230" RenderTransformOrigin="0.5,0.5" StatusComponent="232-21-CV2" Canvas.Left="1199" Canvas.Top="535" HorizontalAlignment="Center" VerticalAlignment="Top" Icon="Right">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="195" RenderTransformOrigin="0.5,0.5" StatusComponent="232-21-CV2" Canvas.Left="1251" Canvas.Top="578" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Color="Water" Width="74" RenderTransformOrigin="0.5,0.5" StatusComponent="232-21-CV2" Canvas.Left="1277" Canvas.Top="613" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Color="Water" Width="126" RenderTransformOrigin="0.5,0.5" StatusComponent="232-21-CV1" Canvas.Left="1088" Canvas.Top="492" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="47" StatusComponent="232-21-CV2" RenderTransformOrigin="0.5,0.5" Canvas.Left="1208" Canvas.Top="633" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Color="Water" Width="156" RenderTransformOrigin="0.5,0.5" StatusComponent="232-21-CV1" Canvas.Left="1073" Canvas.Top="477" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="195" RenderTransformOrigin="0.5,0.5" StatusComponent="232-21-CV1" Canvas.Left="1060" Canvas.Top="401" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Color="Water" Width="320" RenderTransformOrigin="0.5,0.5" StatusComponent="232-21-CV1" Canvas.Left="1072" Canvas.Top="431" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Color="Water" Width="52" RenderTransformOrigin="0.5,0.5" StatusComponent="232-01-MA1" Canvas.Left="1068" Canvas.Top="673" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -145,15 +136,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Machines:V01_MU_Grinder Canvas.Left="838" Canvas.Top="168" Height="244" Width="206" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:CV_Valve_001 HorizontalAlignment="Center" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="1214" Canvas.Top="350" >
-            <Machines:CV_Valve_001.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="-0.5" ScaleY="0.5"/>
-                    <RotateTransform Angle="-180"/>
-                    <TranslateTransform X="-0.5" Y="-1.95"/>
-                </TransformGroup>
-            </Machines:CV_Valve_001.RenderTransform>
-        </Machines:CV_Valve_001>
+        <Machines:CV_Valve_001 HorizontalAlignment="Left" VerticalAlignment="Center" Height="50" Width="50" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="1386" Canvas.Top="408" />
         <Machines:CV_Valve HorizontalAlignment="Left" VerticalAlignment="Center" Height="38" Width="50" Canvas.Left="1126" Canvas.Top="209"/>
         <Machines:V01_WCE_Centrifuge Canvas.Left="1022" Canvas.Top="509" Height="158" Width="226" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_SCW_Screw_wHopper Canvas.Left="909" Canvas.Top="389" HorizontalAlignment="Left" VerticalAlignment="Center" Width="175"/>
@@ -178,22 +161,13 @@
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
-        <Machines:CV_Valve_001 Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="1406" Canvas.Top="527" HorizontalAlignment="Left" VerticalAlignment="Center" >
-            <Machines:CV_Valve_001.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="-0.5" ScaleY="0.5"/>
-                    <RotateTransform Angle="-180"/>
-                    <TranslateTransform X="-0.5" Y="-1.95"/>
-                </TransformGroup>
-            </Machines:CV_Valve_001.RenderTransform>
-        </Machines:CV_Valve_001>
         <Machines:V01_STCN_PrewashReactor_w1Screw_ExtrctionBelt Canvas.Left="306" Canvas.Top="194" Height="221" Width="332" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="232-01-MA1" Canvas.Left="1217" Canvas.Top="472" />
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="232-01-MA1" Canvas.Left="1186" Canvas.Top="472" />
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="230-01-MA1" Canvas.Left="896" Canvas.Top="208"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="231-01-MA1" Canvas.Left="1062" Canvas.Top="328" />
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="230-21-CV1" Canvas.Left="1107" Canvas.Top="157"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="230-02-MA1" Canvas.Left="764" Canvas.Top="332"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="232-21-CV1" Canvas.Left="1217" Canvas.Top="335" />
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="232-21-CV1" Canvas.Left="1362" Canvas.Top="456" />
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="230-01-YA1" Canvas.Left="764" Canvas.Top="262" />
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="233-01-MA1" Canvas.Left="1340" Canvas.Top="652" />
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="210-01-MA1" Canvas.Left="407" Canvas.Top="144"/>
@@ -205,7 +179,6 @@
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="210-21-CV1" Canvas.Left="733" Canvas.Top="80"/>
         <Labels:DeviceLabel ComponentName="210-DISCHARGE" Canvas.Left="492" Canvas.Top="595" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.578,0.27" />
         <Labels:DeviceLabel ComponentName="236-01-MA1" Canvas.Left="738" Canvas.Top="745" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="232-21-CV2" Canvas.Left="1408" Canvas.Top="511" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="230-21-CV1" JumpToLabel="457-01-MA1" Direction="Left" Canvas.Left="1327" Canvas.Top="193"/>
         <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="233-01-MA1" JumpToLabel="420-01-MA1" Canvas.Left="1377" Canvas.Top="764" />
         <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="210-01-MA1" JumpToLabel="118-01-MA1" Canvas.Left="204" Canvas.Top="174"/>
